# spreads

./: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.rst  TODO.txt  build_pkgs.sh  buildmsi.py  diyshoot.py  requirements.txt  setup.cfg  setup.py  spread  template.nsi  test-requirements.txt
debian/: changelog  control  install  pydist-overrides  rules  spreads-gui.install  spreads-web.install  spreads.install
debian/patches/: fix-chdkptp-path.patch  series
debian/spreads-0.5dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
debian/spreadsplug.gui-0.5dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
debian/spreadsplug.web-0.5dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
diyshoot/: __init__.py  util.py
diyshoot/cameras/: __init__.py  a2200.py  base.py
doc/: Makefile  about.rst  api.rst  changelog.rst  cli.rst  commands.rst  conf.py  configuration.rst  configuring.rst  content.rst  developers.rst  drivers.rst  extending.rst  faq.rst  gui.rst  index.rst  installation.rst  make.bat  plugins.rst  requirements.txt  setup-other.rst  setup-spreadpi.rst  spreads_api.rst  spreadsplug_api.rst  start.rst  tutorial.rst  web.rst  web_api.rst
doc/_static/src/: icon.xcf  logo.xcf
doc/_themes/flask/: layout.html  theme.conf
doc/_themes/flask/static/: flasky.css_t
spreads/: __init__.py  cli.py  commands.py  config.py  config_default.yaml  main.py  metadata.py  plugin.py  tkconfigure.py  ui.py  util.py  workflow.py
spreadsplug/: __init__.py  a2200.py  autorotate.py  chdkcamera.py  colorcorrect.py  combine.py  djvubind.py  gui.py  hidtrigger.py  intervaltrigger.py  pdfbeads.py  scantailor.py  tesseract.py
spreadsplug/dev/: chdkcamera.py  dummy.py  gphoto2camera.py
spreadsplug/gui/: __init__.py  gui.py  gui.qrc  gui_rc.py
spreadsplug/web/: NOTES.rst  __init__.py  app.py  common.py  database.py  discovery.py  endpoints.py  handlers.py  index.html  persistence.py  scanapi.py  scanner.py  tasks.py  util.py  web.py  websockets.py  winservice.py  worker.py
spreadsplug/web/client/: Gruntfile.js  Makefile  index.html  karma.conf.js  package.json  spreads.css  spreads.js  spreads.min.js  webpack.config.dev.js  webpack.config.js
spreadsplug/web/client/lib/: backbonemixin.js
spreadsplug/web/client/scss/: _settings.scss  app.scss
spreadsplug/web/client/src/: capture.js  events.js  main.js  messages.js  navbar.js  preferences.js  root.js  router.js  spreadsapp.js  util.js  workflow.js  workflowlist.js
spreadsplug/web/js/: app.js  controllers.js  directives.js  services.js
spreadsplug/web/partials/: download.html  scan.html  setup.html  start.html  submit.html  verify.html
test/: .coverage  autorotate_test.py  capture_test.py  chdkcamera_test.py  cli_test.py  combine_test.py  commands_test.py  gui_test.py  mocks.py  plugin_test.py  scantailor_test.py  shoot_test.py  test_chdkcamera.py  test_scantailor.py  web_test.py  workflow_test.py
tests/: autorotate_test.py  chdkcamera_test.py  cli_test.py  conftest.py  gui_test.py  hidtrigger_test.py  intervaltrigger_test.py  plugin_test.py  pytest.ini  scantailor_test.py  tesseract_test.py  test.db  web_test.py  workflow_test.py
tests/data/: 000.hocr  001.hocr  test.scanTailor
(+31 files in other folders)
