[metadata]
name = spreads
author = Johannes Baiter
author-email = johannes.baiter@gmail.com
summary = Book digitization suite
home-page = http://github.com/jbaiter/spreads
project-url: Documentation, http://spreads.readthedocs.org
description-file = README.rst
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Graphics :: Capture
    Topic :: Multimedia :: Graphics :: Graphics Conversion
keywords =
    digitization
    scanning
    chdk
    diybookscanner
    bookscanning

[files]
packages =
    spreads
    spreadsplug
    spreadsplug.dev
scripts =
    spread

[entry_points]
spreadsplug.devices =
    chdkcamera = spreadsplug.dev.chdkcamera:CHDKCameraDevice
    a2200      = spreadsplug.dev.chdkcamera:CanonA2200CameraDevice
spreadsplug.hooks =
    combine    = spreadsplug.combine:CombinePlugin
    autorotate = spreadsplug.autorotate:AutoRotatePlugin
    scantailor = spreadsplug.scantailor:ScanTailorPlugin
    pdfbeads   = spreadsplug.pdfbeads:PDFBeadsPlugin
    djvubind   = spreadsplug.djvubind:DjvuBindPlugin
    olorcorrect = spreadsplug.colorcorrect:ColorCorrectionPlugin
    tesseract = spreadsplug.tesseract:TesseractPlugin
    gui        = spreadsplug.gui:GuiCommand
