[metadata]
name = spreads
author = Johannes Baiter
author-email = johannes.baiter@gmail.com
summary = Book digitization workflow suite
home-page = http://github.com/jbaiter/spreads
project-url: Documentation, http://spreads.readthedocs.org
description-file = README.rst
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Topic :: Multimedia :: Graphics :: Capture
    Topic :: Multimedia :: Graphics :: Graphics Conversion
keywords =
    digitization
    scanning
    chdk
    diybookscanner
    bookscanning

[files]
packages =
    spreads
    spreads.vendor
    spreadsplug
    spreadsplug.dev
scripts =
    spread

[entry_points]
spreadsplug.devices =
    chdkcamera      = spreadsplug.dev.chdkcamera:CHDKCameraDevice
    a2200           = spreadsplug.dev.chdkcamera:CanonA2200CameraDevice
    dummy           = spreadsplug.dev.dummy:DummyDevice
spreadsplug.hooks =
    autorotate      = spreadsplug.autorotate:AutoRotatePlugin
    scantailor      = spreadsplug.scantailor:ScanTailorPlugin
    pdfbeads        = spreadsplug.pdfbeads:PDFBeadsPlugin
    djvubind        = spreadsplug.djvubind:DjvuBindPlugin
    colorcorrect    = spreadsplug.colorcorrect:ColorCorrectionPlugin
    tesseract       = spreadsplug.tesseract:TesseractPlugin
    gui             = spreadsplug.gui:GuiCommand
